# rustchain-bounties

./: .gitignore  README.md
agent_framework/: agent_onboarding.py
apple2_miner/: Makefile  README.md  miner.c
dreamcast_miner/: Makefile  README.md  miner.c  miner.py
fossils/: README.md  data.js  index.html
integrations/cyberlobster-beacon/: README.md  cyberlobster_beacon_agent.py
integrations/power8-numa-llama/: README.md  benchmark.sh  ggml-numa-shard.c  ggml-numa-shard.h  pr_body.md
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts
redteam/x402-security/: SECURITY_PATCHES.md  SECURITY_REPORT.md  x402_security_test.py
sdk/python/: README.md  pyproject.toml
sdk/python/rustchain/: __init__.py  cli.py  client.py  exceptions.py  explorer.py
sdk/python/tests/: __init__.py  test_cli.py  test_client.py  test_explorer.py
tests/: test_agent_onboarding.py  test_rustchain_arcade_rpi4.py
