[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rustchain"
version = "0.1.0"
description = "Python SDK for the RustChain Proof-of-Antiquity blockchain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "sungdark", email = "sungdark@example.com" }
]
keywords = [
    "rustchain",
    "blockchain",
    "proof-of-antiquity",
    "rtc",
    "cryptocurrency",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "responses>=0.24.0",
]

[project.scripts]
rustchain = "rustchain.cli:main"

[project.urls]
Homepage = "https://rustchain.org"
Repository = "https://github.com/Scottcjn/rustchain-bounties"
Documentation = "https://docs.rustchain.org"

[tool.hatch.build.targets.wheel]
packages = ["rustchain"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["rustchain"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
